--- a/.github/other-configurations/labeller.yml
+++ b/.github/other-configurations/labeller.yml
@@ -1,8 +1,23 @@
 # labels auto assigned to PR, keep in sync with labels.yml
+# Type
 documentation:
   - any:
       - changed-files:
           - any-glob-to-any-file: ["README.md", "*.md", "docs/**"]
+dependencies:
+  - any:
+      - changed-files:
+          - any-glob-to-any-file: ["**/uv.lock", "package-lock.json"]
+      - head-branch: ["^dependabot"]
+configurations:
+  - any:
+      - changed-files:
+          - any-glob-to-any-file:
+              [
+                ".github/other-configurations/*",
+                ".github/super-linter-configurations/*",
+              ]
+# Language
 markdown:
   - any:
       - changed-files:
@@ -13,32 +28,29 @@ markdown:
                 "LICENSE",
                 ".github/pull_request_template.md",
               ]
-dependencies:
+python:
   - any:
       - changed-files:
-          - any-glob-to-any-file: ["**/poetry.lock", "package-lock.json"]
-      - head-branch: ["^dependabot"]
-just:
+          - any-glob-to-any-file: ["*.py", "**/*.py"]
+typescript:
   - any:
       - changed-files:
-          - any-glob-to-any-file: ["Justfile", "**/*.just"]
+          - any-glob-to-any-file:
+              ["*.ts", "*.tsx", "**/*.ts", "**/*.tsx", "**/tsconfig.json"]
 shell:
   - any:
       - changed-files:
           - any-glob-to-any-file: ["**/*.sh"]
+just:
+  - any:
+      - changed-files:
+          - any-glob-to-any-file: ["Justfile", "**/*.just"]
+# Components
+git_hooks:
+  - any:
+      - changed-files:
+          - any-glob-to-any-file: ["lefthook.yml"]
 github_actions:
   - any:
       - changed-files:
           - any-glob-to-any-file: [".github/workflows/*", ".github/actions/*"]
-docker:
-  - any:
-      - changed-files:
-          - any-glob-to-any-file: ["Dockerfile"]
-analyser:
-  - any:
-      - changed-files:
-          - any-glob-to-any-file: ["analyser/**"]
-git_hooks:
-  - any:
-      - changed-files:
-          - any-glob-to-any-file: ["githooks/**"]
