--- a/lefthook.yml
+++ b/lefthook.yml
@@ -20,5 +20,8 @@ pre-commit:
       run: just zizmor-check
     Pinact Checks:
       run: just pinact-check
+    Actionlint Checks:
+      run: just actionlint-check
     EditorConfig Check:
       run: just editorconfig-check
+
