--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -67,6 +67,7 @@ repos:
       - id: pinact
         name: Pinact Check
         language: golang
+        language_version: "go1.25"
         entry: pinact
         additional_dependencies:
           - github.com/suzuki-shunsuke/pinact/v3/cmd/pinact@v3.8.0
