Update Prek Hooks (#210)
# Pull Request

## Description

This pull request updates a dependency version in the
`.pre-commit-config.yaml` file to ensure the latest features and fixes
are used.

- Dependency update:
* Updated the `zizmor-pre-commit` repository from version `v1.19.0` to
`v1.20.0` in `.pre-commit-config.yaml`.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,7 +39,7 @@ repos:
         name: EditorConfig Checker
         description: Validates files against .editorconfig rules
   - repo: https://github.com/zizmorcore/zizmor-pre-commit
-    rev: v1.19.0
+    rev: v1.20.0
     hooks:
       - id: zizmor
         name: Zizmor
@@ -67,6 +67,7 @@ repos:
       - id: pinact
         name: Pinact Check
         language: golang
+        language_version: "go1.25"
         entry: pinact
         additional_dependencies:
           - github.com/suzuki-shunsuke/pinact/v3/cmd/pinact@v3.8.0
